# TradeOrganization

./: README.md  cppTask2.sln
Debug/: cppTask2.ilk
Release/: cppTask2.iobj  cppTask2.ipdb
cppTask2/: Asset.h  CMakeLists.txt  Client.h  Date.cpp  Date.h  Milk.cpp  Milk.h  Product.h  RetailClient.cpp  RetailClient.h  Seller.cpp  Seller.h  Shop.cpp  Shop.h  Towel.h  TradeOrganization.h  Warehouse.cpp  Warehouse.h  WholesaleClient.cpp  WholesaleClient.h  cppTask2.cpp  cppTask2.vcxproj  cppTask2.vcxproj.filters
cppTask2/Debug/: vc142.idb
cppTask2/Debug/cppTask2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cppTask2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cppTask2/Release/cppTask2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cppTask2.lastbuildstate  cppTask2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
